--- a/templates/app/app.html
+++ b/templates/app/app.html
@@ -16,7 +16,7 @@
 {# todo <link rel="icon" type="image/png" href="">#}
     <meta charset="UTF-8">
 </head>
-<body>
+<body class="{{ color_scheme }}">
     {% block content %}{% endblock %}
     {% block body_script %}{% endblock %}
 </body>
