--- a/templates/app/scheduler.html
+++ b/templates/app/scheduler.html
@@ -29,6 +29,9 @@
             <div class="course-list">
                 <div id="course-list-view"></div>
             </div>
+            <div class="footer">
+                <div>Toggle <span id="theme-toggle">dark theme</span></div>
+            </div>
         </div>
         <div class="section timetable">
             <div class="timetable-view">
