fix: duplicate entries in course list
+ fix: duplicate entries in course list
+ feat: loading placeholder for course

--- a/app/static/app/style.css
+++ b/app/static/app/style.css
@@ -139,6 +139,10 @@ body {
     box-shadow: 0 30px 50px rgba(0, 0, 0, .2), 0 4px 8px rgba(0, 0, 0, .1);
 }
 
+.loading-string::after {
+    content: ".";
+}
+
 /* Scrollbar Styles ***************************************************************************************************/
 
 ::-webkit-scrollbar {
