--- a/templates/app/scheduler.html
+++ b/templates/app/scheduler.html
@@ -15,6 +15,7 @@
 {% block content %}
     <div class="container">
         <div class="section sidebar">
+            <h1 class="sidebar-header">Scheduler</h1>
             <div class="textbox">
                 <div>Current semester: {{ name }}</div>
             </div>
@@ -44,7 +45,7 @@
                         <th class="timetable-workday">Thursday</th>
                         <th class="timetable-workday">Friday</th>
                         <th class="timetable-weekend">Saturday</th>
-                        <th class="timetable-weekend">Sunday</th>
+                        <th class="timetable-weekend sunday">Sunday</th>
                     </tr>
                 </table>
 
