--- a/templates/app/app.html
+++ b/templates/app/app.html
@@ -9,11 +9,11 @@
     {# jQuery #}
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     {# jQuery UI #}
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <!--<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">-->
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script type="text/javascript" src="{% static 'app/index.js' %}"></script>
     {% block head_script %}{% endblock %}
-{# todo <link rel="icon" type="image/png" href="">#}
+    <link rel="icon" type="image/png" href="{% static 'app/favicon.png' %}">
     <meta charset="UTF-8">
 </head>
 <body class="{{ color_scheme }}">
