--- a/templates/app/scheduler.html
+++ b/templates/app/scheduler.html
@@ -10,7 +10,7 @@
             semester_last_update_dt = '{{ update_dt }}';
 
         let scheduleList = [{'id': '1', 'name': 'Default', 'data': {}}],
-            event_color_set = {
+            generic_color_set = {
                 'D50000': 0, // Tomato
                 'E67C73': 0, // Flamingo
                 'F4511E': 0, // Tangerine
@@ -23,6 +23,20 @@
                 '8E24AA': 0, // Grape
                 '616161': 0, // Graphite
                 '795548': 0  // Custom (Brown)
+            },
+            named_color_set = {
+                'tomato': 0,
+                'flamingo': 0,
+                'tangerine': 0,
+                'banana': 0,
+                'sage': 0,
+                'basil': 0,
+                'peacock': 0,
+                'blueberry': 0,
+                'lavender': 0,
+                'grape': 0,
+                'graphite': 0,
+                'brown': 0
             };
     </script>
 {% endblock %}
