--- a/app/static/app/style.css
+++ b/app/static/app/style.css
@@ -217,25 +217,30 @@ html {
 }
 
 body {
-    background: var(--background);
-    color: var(--text);
-    margin: 0;
-    padding: 0;
     height: 100%;
     width: 100%;
+    margin: 0;
+    padding: 0;
+
+    display: flex;
+    flex-flow: column nowrap;
+
     font-family: 'Work Sans', sans-serif;
+    background: var(--background);
+    color: var(--text);
 }
 
 .container {
+    flex: 1 1 auto;
+
     display: flex;
-    height: 100%;
-    align-items: center;
-    z-index: 2;
+    min-height: 0; /* does not shrink properly if removed */
+    /*align-items: center;*/
 }
 
 .section {
-    margin: 0 10vh 0 0;
-    box-shadow: 0 30px 50px rgba(0, 0, 0, .2), 0 4px 8px rgba(0, 0, 0, .1);
+    /*margin: 0 10vh 0 0;*/
+    /*box-shadow: 0 30px 50px rgba(0, 0, 0, .2), 0 4px 8px rgba(0, 0, 0, .1);*/
 }
 
 .loading-string::after {
@@ -261,27 +266,57 @@ body {
     background: var(--scrollbar-th);
 }
 
+/* Header Styles ***************************************************************************************************/
+
+.header {
+    flex: 0 0 4em;
+
+    display: flex;
+
+    background: var(--background);
+    border-bottom: solid 1px var(--border);
+}
+
+.header-title-container {
+    width: 18em;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header-app-title {
+    margin-right: 0.25em;
+
+    font-size: 1.5em;
+    font-weight: 300;
+    color: var(--text);
+}
+
+.header-semester-title {
+    margin-top: 0.25em;
+    padding: 0 0.25em 0 0.25em;
+
+    background: var(--background-light);
+    color: var(--text-alt);
+    border-radius: 0.25em;
+}
+
 /* Sidebar Styles *****************************************************************************************************/
 
 .sidebar {
-    display: flex;
-    flex: 1 0 300px;
+    flex: 0 0 18em;
     height: 100%;
-    background: var(--background);
-    color: var(--text);
-    z-index: 10;
-    overflow: auto;
+
+    display: flex;
     flex-direction: column;
     text-align: center;
-}
 
-.sidebar-header {
-    margin: 10vh 0 2vh 0;
-}
-
-.textbox {
+    background: var(--background);
     color: var(--text);
-    margin: 0 0 3vh 0;
+    border-right: solid 1px var(--border);
+    z-index: 10;
+    overflow: auto;
 }
 
 #schedule-selector {
@@ -289,7 +324,7 @@ body {
 }
 
 .course-select {
-    margin: 0 0 2vh 0;
+    margin: 1em 0 1em 0;
 }
 
 .course-list {
@@ -461,7 +496,7 @@ body {
     height: 1em;
     width: 1em;
     margin: auto;
-    color: rgba(255,255,255,1);
+    color: rgba(255, 255, 255, 1);
     border: 1px solid var(--transparent-10);
     border-radius: 1em;
     transition: all 0.2s;
@@ -602,25 +637,42 @@ table {
 }
 
 .timetable {
-    flex: 9 0 auto;
-    height: 80vh;
-    width: 60vw;
-    min-width: 700px;
-    border-radius: .5em;
+    flex: 1 1 auto;
+    min-width: 40em;
 }
 
 .timetable-view {
+    display: flex;
+    flex-flow: column nowrap;
+
     height: 100%;
     margin: 0 auto;
-    padding-right: 1em;
+}
+
+.timetable-online-course-list {
+    /*display: flex;*/
+    display: none;
+    flex: 0 0 5em;
+    border-bottom: solid 1px var(--border);
 }
 
 .timetable-header {
-    height: 40px;
+    flex: 0 0 3em;
+    z-index: 5;
+}
+
+.timetable-header-shadow {
+    box-shadow: 0 0.5em 0.5em rgba(0, 0, 0, .1), 0 0.25em 0.25em rgba(0, 0, 0, .05);
+}
+
+.timetable-header tr {
+    height: 3em;
 }
 
 .timetable-box {
-    height: 94%;
+    flex: 1 1 auto;
+    margin: 0 1em 0em 0;
+
     overflow-x: hidden;
     overflow-y: scroll;
     -ms-overflow-style: none;
@@ -648,6 +700,10 @@ table {
 
 .sunday {
     display: none;
+}
+
+th {
+    font-weight: 500;
 }
 
 td {
@@ -679,7 +735,7 @@ tr.timetable-last td {
     color: var(--text-alt);
     text-align: left;
     font-size: 0.9em;
-    z-index: 10;
+    z-index: 3;
     padding: 0.5em;
     overflow-x: hidden;
     border-radius: 2px;
