--- a/templates/app/app.html
+++ b/templates/app/app.html
@@ -5,7 +5,7 @@
     <title>{% block title %}{{ page_title }}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'app/style.css' %}">
     {# Work Sans font #}
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,200;0,400;0,500;0,600;1,200;1,400;1,500;1,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
     {# jQuery #}
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     {# jQuery UI #}
