--- a/templates/app/scheduler.html
+++ b/templates/app/scheduler.html
@@ -48,6 +48,9 @@
             <span class="header-app-title">Scheduler</span>
             <span class="header-semester-title">{{ name }}</span>
         </div>
+        <div class="header-menu">
+            <div class="header-menu-item">Switch to <span id="theme-toggle">dark theme</span></div>
+        </div>
     </header>
 
     <div class="container">
@@ -64,7 +67,6 @@
                 <div id="course-list-view"></div>
             </div>
             <div class="footer">
-                <div>Toggle <span id="theme-toggle">dark theme</span></div>
             </div>
         </div>
         <div class="section timetable">
