--- a/app/static/app/style.css
+++ b/app/static/app/style.css
@@ -754,13 +754,14 @@ th {
 
 td {
     position: relative;
-    text-align: center;
-    vertical-align: top;
     height: 2.5em;
     width: auto;
+    padding: 0;
+
+    text-align: center;
+    vertical-align: top;
     border-bottom: 1px solid var(--border);
     border-right: 1px solid var(--border);
-    padding: 0.25em 0.25em 0 0.25em;
 }
 
 td:last-child { /* sunday cells */
@@ -772,17 +773,22 @@ td:nth-last-child(2) { /* saturday cells */
     border-right: none;
 }
 
-tr.timetable-last td {
+tr.timetable-last td { /* last row in timetable */
     border-bottom: none;
 }
 
 .event {
-    background: var(--event);
-    color: var(--text-alt);
-    text-align: left;
-    font-size: 0.9em;
-    z-index: 3;
+    position: absolute;
+    width: calc(100% - 0.5em);
     padding: 0.5em;
+    margin: 0.25em;
+    z-index: 3;
+
+    font-size: 0.9em;
+    text-align: left;
     overflow-x: hidden;
     border-radius: 0.125em;
+
+    background: var(--event);
+    color: var(--text-alt);
 }
