--- a/app/static/app/style.css
+++ b/app/static/app/style.css
@@ -475,7 +475,7 @@ body {
     flex-direction: column;
     align-items: center;
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
 }
 
@@ -772,7 +772,7 @@ table {
 .timetable-time {
     position: relative;
     width: 3.75em;
-    top: -0.8em;
+    top: -0.6em;
 
     color: var(--text-light);
     text-align: center;
