--- a/app/static/app/style.css
+++ b/app/static/app/style.css
@@ -222,6 +222,35 @@ body.dark-theme {
     background: #795548 !important;
 }
 
+/* Print Mode *********************************************************************************************************/
+
+@media print {
+    .overlay {
+        display: none !important;
+    }
+
+    .header {
+        display: none !important;
+    }
+
+    .sidebar {
+        display: none !important;
+    }
+
+    body {
+        font-size: 0.75em;
+        --text: #000 !important;
+        --text-light: #666 !important;
+        --text-alt: #fff !important;
+
+        --background: #fff !important;
+        --background-light: #aaa !important;
+
+        --event: rgba(80, 80, 80, 1) !important;
+        --border: #eee !important;
+    }
+}
+
 /* Autocomplete Styles (jQuery UI) ************************************************************************************/
 
 .ui-autocomplete {
@@ -312,6 +341,32 @@ body {
     box-shadow: 0 0.5em 0.5em rgba(0, 0, 0, .1), 0 0.25em 0.25em rgba(0, 0, 0, .05);
 }
 
+.overlay {
+    display: flex;
+    position: fixed;
+
+    align-items: center;
+    justify-content: center;
+    flex-flow: column nowrap;
+
+    z-index: 9999;
+    width: 100%;
+    height: 0;
+    background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0) 100%);
+    opacity: 0;
+    transition: all 0.5s;
+}
+
+.overlay.active {
+    height: 100%;
+    opacity: 1;
+}
+
+.overlay-header {
+    font-size: 2em;
+    font-weight: 600;
+}
+
 /* Scrollbar Styles ***************************************************************************************************/
 
 ::-webkit-scrollbar {
@@ -376,13 +431,27 @@ body {
 }
 
 .header-menu-item {
-    margin: auto 0.5em auto 0.5em;
+    cursor: pointer;
+    margin: auto 1em auto 1em;
+    border-bottom: solid 0 var(--border);
+    transition: all 0.1s;
+}
+
+.header-menu-item:hover {
+    border-bottom: solid 0.25em var(--border);
+}
+
+.header-menu-item a {
+    text-decoration: none;
+}
+.header-menu-item a:visited {
+    color: var(--text);
+    text-decoration: none;
 }
 
 #theme-toggle {
     color: var(--text);
     cursor: pointer;
-    text-decoration: underline;
 }
 
 /* Sidebar Styles *****************************************************************************************************/
