--- a/templates/app/scheduler.html
+++ b/templates/app/scheduler.html
@@ -57,6 +57,9 @@
             <span class="header-app-title">Scheduler</span>
             <span class="header-semester-title">{{ name }}</span>
         </div>
+        <div class="header-message-container">
+            <div class="header-message" id="header-message"></div>
+        </div>
         <div class="header-menu">
             <div class="header-menu-item"><a href="https://github.com/aldan/scheduler" target="_blank">Github Repo</a></div>
             <div class="header-menu-item" onclick="window.print()">Print</div>
