--- a/templates/app/scheduler.html
+++ b/templates/app/scheduler.html
@@ -43,7 +43,8 @@
                 'grape': 0,
                 'graphite': 0,
                 'brown': 0
-            };
+            },
+            sync_progress = 0;
     </script>
 {% endblock %}
 
